[#21061] Fatal error when "Show Title" is set to "No". Thanks Omar.
[#20945] email error when creating a new user. Thanks Elin.
[#21059] Image selector layout problems. Thanks Omar.
[#20837] Deleting usergroup that have been assigned to access levels does not remove them from the #__viewlevels table. Thanks Christophe.
[#21081] [patch] URL not required when submitting weblink. Thanks Michael.

21-Jun-2010 Christophe Demko
 # Fixed issue [#20786] com_users - no frontend_userparams
 # Fixed issue [#21118] Thumbnails not showing on frontend in Popup

20-Jun-2010 Mark Dexter
# [#20781] [patch] Remove deprecated attribute language from all occurrences of the tag script
# [#20989] input elements must be nested in a block level tag
# [#21119] [patch] Passwords displayed as plain text in Global Config
# [#20875] Error in css beez template

20-Jun-2010 Christophe Demko
 # Correcting a small issue in JHtmlJGrid

20-Jun-2010 Jean-Marie Simonet
[#20757] Contacts unpublished visible in frontend. Thanks Christophe.
[#21042] When enabling/disabling the flash uploader, page refresh needed on 'Options > Save'. Thanks Omar.
[#21036] Ordering text for new items is floating up and to the right. Thanks Omar
[#20701] A lot of core extensions have not been marked as "protected. Thanks Nicholas.

19-Jun-2010 Mark Dexter
# [#21010] &nbsp; must not be used (Thanks Rouven)
# [#20634] Ordering Categories with integers doesn't work
# [#20483] After opening and saving plugin, plugin is removed [strict]

19-Jun-2010 Jean-Marie Simonet
[#21073] Media Manager image upload issue (front-end)
[#21039] Default path for install from directory missing. Thanks Artyom.
$ Added missing string
[#20966] Blog Order Down Doesn't Work In Some Cases. Thanks Mark.

18-Jun-2010 Jean-Marie Simonet
[#21046] menu - single article missing string + some
[#21049] frontpage editor image upload string error (Thanks Bill)
$ Adding strings in com_media.ini frontend