@@ -40,6 +40,7 @@ $ -> Language fix or change
 [#21059] Image selector layout problems. Thanks Omar.
 [#20837] Deleting usergroup that have been assigned to access levels does not remove them from the #__viewlevels table. Thanks Christophe.
 [#21081] [patch] URL not required when submitting weblink. Thanks Michael.
+[#20695] Parameter merge for contacts categories view is not working. Thanks Bill.
 
 21-Jun-2010 Christophe Demko
  # Fixed issue [#20786] com_users - no frontend_userparams
